@@ -114,6 +114,7 @@ All (GUI):
   charset in ANSI build.
 - wxGrid now indicates focus by using different colour for selection
   and hiding cell cursor when it doesn't have focus.
+- Added alpha support to wxImage::Paste() (Steven Van Ingelgem)
 
 All (Unix):
 
